tests/transpiler/x/java/left_join.error
exit status 1
Main.java:26: error: <identifier> expected
         orderId;
                ^
Main.java:27: error: <identifier> expected
         customer;
                 ^
Main.java:28: error: <identifier> expected
         total;
              ^
Main.java:29: error: <identifier> expected
        Data3( orderId,  customer,  total) {
                      ^
Main.java:29: error: <identifier> expected
        Data3( orderId,  customer,  total) {
                                 ^
Main.java:29: error: <identifier> expected
        Data3( orderId,  customer,  total) {
                                         ^
Main.java:37: error: <identifier> expected
         orderId;
                ^
Main.java:38: error: <identifier> expected
         customer;
                 ^
Main.java:39: error: <identifier> expected
         total;
              ^
Main.java:40: error: <identifier> expected
        Result4( orderId,  customer,  total) {
                        ^
Main.java:40: error: <identifier> expected
        Result4( orderId,  customer,  total) {
                                   ^
Main.java:40: error: <identifier> expected
        Result4( orderId,  customer,  total) {
                                           ^
12 errors
